--- a/TestGit/force-app/main/default/classes/newapex.cls
+++ b/TestGit/force-app/main/default/classes/newapex.cls
@@ -1,5 +1,7 @@
 public with sharing class newapex {
     public newapex() {
-        System.debug('Hello word');
+        System.debug('Hello world');
+        System.debug('swas');
+        System.debug('rekhs');
     }
 }
